--- a/untitled.html
+++ b/untitled.html
@@ -82,16 +82,27 @@
                   <div class="yamm-content">
                     <div class="row">
 
-                      <ul class="col-sm-6 list-unstyled">
+                      <ul class="col-md-6 list-unstyled">
                         <li>
-                          <p><strong>Links Title</strong></p>
+                          <p><strong>Location</strong></p>
                         </li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
+                        <li><a href="#">Carlsbad</a></li>
+                        <li><a href="#">Downtown</a></li>
+                        <li><a href="#">Mission Beach</a></li>
+                        <li><a href="#">Normal Heights</a></li>
+                        <li><a href="#">Ocean Beach</a></li>
+                        <li><a href="#">Pacific Beach</a></li>
+                      </ul>
+                      <ul class="col-md-6 list-unstyled">
+                        <li>
+                          <p><strong>Location</strong></p>
+                        </li>
+                        <li><a href="#">Carlsbad</a></li>
+                        <li><a href="#">Downtown</a></li>
+                        <li><a href="#">Mission Beach</a></li>
+                        <li><a href="#">Normal Heights</a></li>
+                        <li><a href="#">Ocean Beach</a></li>
+                        <li><a href="#">Pacific Beach</a></li>
                       </ul>
                     </div>
                   </div>
@@ -121,28 +132,7 @@
                 </li>
               </ul>
             </li>
-            <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Calendar<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li>
-                  <!-- Content container to add padding -->
-                  <div class="yamm-content">
-                    <div class="row">
-
-                      <ul class="col-sm-6 list-unstyled">
-                        <li>
-                          <p><strong>Links Title</strong></p>
-                        </li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                        <li><a href="#"> Link Item </a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+            <li><a href="calendar.html">Calendar</a>
             </li>
             </ul>
         </div>
