--- a/untitled.html
+++ b/untitled.html
@@ -35,7 +35,7 @@
    <div class="navbar yamm navbar-default navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Yamm Megamenu</a>
+          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">Local Music</a>
         </div>
         <div id="navbar-collapse-1" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -158,9 +158,13 @@
           </p>
 
 
+<div class="row">
+<div class="col-md-12">
+<h2>Concert Dates</h2>
+</div>
+</div>
 
         <div class="row">
-        <h2>Featured Artists</h2>
           <div class="col-md-12">
 
 
