Updated bowen page

--- a/bowen.html
+++ b/bowen.html
@@ -168,11 +168,75 @@
 
               <img src = "./images/bowen.jpg" height = "450"/>
 
-              <h3>Biography</h3>
+              <h3>About</h3>
 
-              <p>[32] Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?
+              <p>A Southern California native and the son of four generations of musicians, Aaron Bowen has been a student of music, and in particular a student of the guitar, from an early age. His career as a songwriter and producer, however, has taken root and flourished within the last decade.</p>
 
-                [33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat…</p>
+              <p>His music continues the tradition of singer-songwriters like Harry Nilsson, Van Dyke Parks and Brian Wilson while creating something fresh and unique to share with modern audiences.</p>
+
+              <p>His newest release, The Karaoke Fallback Plan is filled with complex harmonies, intricate guitar picking and catchy melodies.</p>
+
+              <p>Website:  http://aaronbowenmusic.com/</p>
+
+              <h3>Upcoming Shows</h3>
+
+              <p>October 3rd  8pm Java Joe’s 3536 Adams Ave San Diego 92116 
+
+                with Caroline Corn </p>
+
+                <p>October 23 &amp; 24 The More Then Folk Festival  Paris, FR </p>
+
+                <p>October 25th Le Bouillon St. Stef 96 Rue de Menilmontant Paris FR
+
+                  with Jessie Andra Smith</p>
+
+                  <p>November 6th Les Cariatides Paris FR with Opium Dream Estate and Jessie Andra Smith</p>
+
+                  <p>November 16th 7:30 Songwriters Acoustic Nights 1531 Tyler Ave San Diego CA 92103 with Jack Tempchin &amp; Friends </p>
+
+                  <p>November 21st 9pm Lestat’s West 3343 Adams Ave San Diego CA 92116
+
+                    with Jesse Daniel Edwards </p>
+
+                    <h3>Media</h3>
+
+                    <p>
+
+                      Oh Edith Live <br/>
+
+                      <a>https://www.youtube.com/watch?v=Lelk-1OuPRQ</a></p>
+
+                      <p>Rue Vincent Moris Live<br/>
+
+                        <a>https://www.youtube.com/watch?v=vINEO_EE_Nw</a></p>
+
+                        <p>The Riverside Live In Paris<br/>
+
+                          <a>https://www.youtube.com/watch?v=lnUo8AR8umA</a></p>
+
+                          <p>A Murder of Crows<br/>
+
+                            <a>https://www.youtube.com/watch?v=A5mMcfKdVq8</a></p>
+
+                            <p>When The Fall Of Rome Live<br/>
+
+
+                              <a>https://www.youtube.com/watch?v=MyM1o6RPzJg</a></p>
+
+                              <p>Blood Live<br/>
+
+
+                                <a>https://www.youtube.com/watch?v=uSLd7v75gIQ</a></p>
+
+                                <p>Recoil Live<br/>
+
+                                  <a>https://www.youtube.com/watch?v=rN39wEUQ7y8</a>
+                                </p>
+
+
+
+                              </div>
+                            </div>
 
 
 
@@ -184,48 +248,24 @@
 
 
 
+                          </div><!--/.col-xs-12.col-sm-9-->
 
+                          <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
+                            <h2>Concert Feed</h2>
 
+                            <div class="list-group">
+                              <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%2366cccc&amp;src=alrodz018%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="400" height="400" frameborder="0" scrolling="no"></iframe>
+                            </div>
+                          </div><!--/.sidebar-offcanvas-->
+                        </div><!--/row-->
 
+                        <hr>
 
+                        <footer>
+                          <p>&copy; Company 2014</p>
+                        </footer>
 
-
-
-
-
-
-
-              </div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-          </div><!--/.col-xs-12.col-sm-9-->
-
-          <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
-            <h2>Concert Feed</h2>
-
-            <div class="list-group">
-              <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%2366cccc&amp;src=alrodz018%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="400" height="400" frameborder="0" scrolling="no"></iframe>
-            </div>
-          </div><!--/.sidebar-offcanvas-->
-        </div><!--/row-->
-
-        <hr>
-
-        <footer>
-          <p>&copy; Company 2014</p>
-        </footer>
-
-      </div><!--/.container-->
+                      </div><!--/.container-->
 
 
     <!-- Bootstrap core JavaScript
