--- a/untitled.html
+++ b/untitled.html
@@ -160,7 +160,7 @@
 
 <div class="row">
 <div class="col-md-12">
-<h2>Concert Dates</h2>
+<h2>Featured</h2>
 </div>
 </div>
 
@@ -183,28 +183,28 @@
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <a href="#">
-                                <img src="./images/foo.png" alt="">
+                                <img src="./images/ryan.png" alt="">
                                 <h3 class="carousel-caption">
-                                    Consistently ranked in the top 20 universities in the UK
+                                    Ryan Adams and Jenny Lewis
                                 </h3>
                             </a>
                         </div>
                         <div class="item">
-                            <img src="./images/foo.png" alt="">
+                            <img src="./images/mystic.jpg" alt="">
                             <h3 class="carousel-caption">
-                                Our global challenges are changing the world
+                                Mystic Braves
                             </h3>
                         </div>
                         <div class="item">
-                            <img src="./images/foo.png" alt="">
+                            <img src="./images/francisco.jpg" alt="">
                             <h3 class="carousel-caption">
-                                Knowledge and innovation is our business
+                                Francisco the Man
                             </h3>
                         </div>
                         <div class="item">
-                            <img src="./images/foo.png" alt="">
+                            <img src="./images/cosmonauts.png" alt="">
                             <h3 class="carousel-caption">
-                                Join our global family of graduates, parents and friends
+                                The Cosmonauts
                             </h3>
                         </div>
                     </div>
@@ -349,6 +349,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.js"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
