top venues on homepage, image size 125x125

--- a/untitled.html
+++ b/untitled.html
@@ -150,27 +150,11 @@
 
     <div class="container">
 
-      <div class="row row-offcanvas row-offcanvas-right">
-
+      <div class="row">
         <div class="col-md-8">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
 
 
-<div class="row">
-<div class="col-md-12">
-<h2>Featured</h2>
-</div>
-</div>
-
-        <div class="row">
-          <div class="col-md-12">
-
-
-
-
-<div id="carousel_home_page" class="carouselslide" data-ride="carousel">
+<div class ="col-md-12" id="carousel_home_page" class="carouselslide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#carousel_home_page" data-slide-to="0" class="active"></li>
@@ -224,31 +208,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-          </div>
-          </div>
-
-
-
-
-
-
-
-
-
-          
-          <div class="row">
           <h2>Top Artists</h2>
             <div class="col-md-3">
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -269,19 +228,23 @@
  <hr>   
             <h2>Top Venues</h2>
             <div class="col-md-3">
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <img src="./images/98.jpg" alt="">
+              <p>98 Bottles </p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-md-3">
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <img src="./images/belly.jpg" alt="">
+              <p>Belly Up</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
           <div class="col-md-3">
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <img src="./images/bassmnt.jpg" alt="">
+              <p>Bassmnt</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-md-3">
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <img src="./images/loft.jpg" alt="">
+              <p>The Loft</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
 <hr>
@@ -323,10 +286,10 @@
 
 
 
-          </div><!--/row-->
+          
         </div><!--/.col-xs-12.col-sm-9-->
 
-        <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
+        <div class="col-md-3 " id="sidebar" role="navigation">
         <h2>Concert Feed</h2>
 
           <div class="list-group">
