--- a/venues.html
+++ b/venues.html
@@ -235,200 +235,200 @@
 
             </div>
 
-<!-- 
 
-Artbeat on Main Street
 
-    Dec 16: Open Mic Nights
+<h3>Artbeat on Main Street</h3>
 
-Athenaeum Music and Arts Library
+    <p>Dec 16: Open Mic Nights</p>
 
-    Jan 8, 2015: SoundON Festival of Modern Music
-    Jan 21, 2015: Ben Wendel Quartet
-    Feb 6, 2015: Kevin Hays New Day Trio
-    Feb 13, 2015: Billy Childs Quartet
-    Feb 19, 2015: New York Standards Quartet
+<h3>Athenaeum Music and Arts Library</h3>
+
+    <p>Jan 8, 2015: SoundON Festival of Modern Music</br>
+    Jan 21, 2015: Ben Wendel Quartet</br>
+    Feb 6, 2015: Kevin Hays New Day Trio</br>
+    Feb 13, 2015: Billy Childs Quartet</br>
+    Feb 19, 2015: New York Standards Quartet</p>
 
 The Auditorium at the Scripps Research Institute
 
-    Jan 25, 2015: Jiayan Sun
-    Feb 8, 2015: Ingolf Wunder
-    Apr 26, 2015: Han Bin Yoon
+    Jan 25, 2015: Jiayan Sun</br>
+    Feb 8, 2015: Ingolf Wunder</br>
+    Apr 26, 2015: Han Bin Yoon</br>
 
 Bahia Resort Hotel
 
-    Dec 18: DJ Mike Czech
-    Dec 31: New Years Eve on the Bahia Belle
+    Dec 18: DJ Mike Czech</br>
+    Dec 31: New Years Eve on the Bahia Belle</br>
 
 The Bailey Wood Pit Barbecue
 
-    Dec 13: Live music and dancing
+    Dec 13: Live music and dancing</br>
 
 Balboa Park Activity Center
 
-    Jan 19, 2015: All Peoples Celebration
+    Jan 19, 2015: All Peoples Celebration</br>
 
 Balboa Theatre
 
-    Dec 13: SD Gay Men's Chorus Holiday Spectacular
-    Dec 20: Peter White Christmas
-    Dec 23: Dave Koz and Friends Christmas 2014
-    Jan 31, 2015: Patti Smith
-    Feb 6, 2015: Kodo One Earth Tour: Mystery
-    Feb 8, 2015: Avett Brothers
-    Feb 22, 2015: A Salute to American Jazz Greats
-    Mar 3, 2015: Don Williams
-    Apr 11, 2015: Buddy Guy
-    May 3, 2015: Once Upon a Tiempo
-    May 16, 2015: Arturo Sandoval & Poncho Sanchez
+    Dec 13: SD Gay Men's Chorus Holiday Spectacular</br>
+    Dec 20: Peter White Christmas</br>
+    Dec 23: Dave Koz and Friends Christmas 2014</br>
+    Jan 31, 2015: Patti Smith</br>
+    Feb 6, 2015: Kodo One Earth Tour: Mystery</br>
+    Feb 8, 2015: Avett Brothers</br>
+    Feb 22, 2015: A Salute to American Jazz Greats</br>
+    Mar 3, 2015: Don Williams</br>
+    Apr 11, 2015: Buddy Guy</br>
+    May 3, 2015: Once Upon a Tiempo</br>
+    May 16, 2015: Arturo Sandoval & Poncho Sanchez</br>
 
 The Bancroft
 
-    Dec 18: Local Rhythm and Slum Summer
-    Dec 19: Nathan Hubbard's Passengers and Grex
-    Dec 31: Back 2 Black
-    Jan 1, 2015: Darkwave Garden
-    Jan 5, 2015: Growl
-    Jan 6, 2015: Bujie & the Highrise and Bleeskiez
+    Dec 18: Local Rhythm and Slum Summer</br>
+    Dec 19: Nathan Hubbard's Passengers and Grex</br>
+    Dec 31: Back 2 Black</br>
+    Jan 1, 2015: Darkwave Garden</br>
+    Jan 5, 2015: Growl</br>
+    Jan 6, 2015: Bujie & the Highrise and Bleeskiez</br>
 
 Bar Dynamite
 
-    Dec 12: 24K Gold
-    Dec 13: Bar Dynamite Saturdays
-    Dec 16: Boom Bap
-    Dec 17: Dance Klassique
+    Dec 12: 24K Gold</br>
+    Dec 13: Bar Dynamite Saturdays</br>
+    Dec 16: Boom Bap</br>
+    Dec 17: Dance Klassique</br>
     Dec 19: 24K Gold
-    Dec 20: Bar Dynamite Saturdays
-    Dec 23: Boom Bap
-    Dec 26: 24K Gold
-    Dec 27: Bar Dynamite Saturdays
-    Dec 30: Boom Bap
-    Dec 31: Dance Classique New Year
-    Jan 2, 2015: 24K Gold
-    Jan 3, 2015: Bar Dynamite Saturdays
-    Jan 9, 2015: 24K Gold
+    Dec 20: Bar Dynamite Saturdays</br>
+    Dec 23: Boom Bap</br>
+    Dec 26: 24K Gold</br>
+    Dec 27: Bar Dynamite Saturdays</br>
+    Dec 30: Boom Bap</br>
+    Dec 31: Dance Classique New Year</br>
+    Jan 2, 2015: 24K Gold</br>
+    Jan 3, 2015: Bar Dynamite Saturdays</br>
+    Jan 9, 2015: 24K Gold</br>
 
 Bar Pink
 
-    Dec 12: Behind the Wagon
-    Dec 14: Rat Sabbath with DJ Ratty
-    Dec 15: The Husky Boy All-Stars
-    Dec 16: Tiki Tuesday
-    Dec 19: Mr. Blow & Friends
-    Dec 20: Neon Beat
-    Dec 21: Rat Sabbath with DJ Ratty
-    Dec 22: Soultry Mondays
-    Dec 23: DJ Old Man Johnson
-    Dec 24: DJ L
-    Dec 26: 80s Heart 90s
-    Jan 24, 2015: Gone Baby Gone, Schitzophonics, Loons
+    Dec 12: Behind the Wagon</br>
+    Dec 14: Rat Sabbath with DJ Ratty</br>
+    Dec 15: The Husky Boy All-Stars</br>
+    Dec 16: Tiki Tuesday</br>
+    Dec 19: Mr. Blow & Friends</br>
+    Dec 20: Neon Beat</br>
+    Dec 21: Rat Sabbath with DJ Ratty</br>
+    Dec 22: Soultry Mondays</br>
+    Dec 23: DJ Old Man Johnson</br>
+    Dec 24: DJ L</br>
+    Dec 26: 80s Heart 90s</br>
+    Jan 24, 2015: Gone Baby Gone, Schitzophonics, Loons</br>
 
 Barleymash
 
-    Dec 15: DJ Slowhand
-    Dec 19: DJ Fresh One
-    Dec 20: DJ Slowhand
-    Dec 23: DJ Who and Paulo Da Rosa
-    Dec 24: DJ Demon
-    Dec 29: DJ Slowhand
+    Dec 15: DJ Slowhand</br>
+    Dec 19: DJ Fresh One</br>
+    Dec 20: DJ Slowhand</br>
+    Dec 23: DJ Who and Paulo Da Rosa</br>
+    Dec 24: DJ Demon</br>
+    Dec 29: DJ Slowhand</br>
 
 Bassmnt
 
-    Dec 13: EDX
-    Dec 31: Tritonal
+    Dec 13: EDX</br>
+    Dec 31: Tritonal</br>
 
 Beaumont's
 
-    Dec 12: Dave Gleason Trio
-    Dec 13: Jones Revival
-    Dec 14: Joe Cardillo
-    Dec 18: Adam Block Duo
-    Dec 19: Camino Paz
-    Dec 20: Melanie Taylor Band
-    Dec 26: Fish & the Seaweeds
-    Dec 31: Rare Form
+    Dec 12: Dave Gleason Trio</br>
+    Dec 13: Jones Revival</br>
+    Dec 14: Joe Cardillo</br>
+    Dec 18: Adam Block Duo</br>
+    Dec 19: Camino Paz</br>
+    Dec 20: Melanie Taylor Band</br>
+    Dec 26: Fish & the Seaweeds</br>
+    Dec 31: Rare Form</br>
 
 Belly Up
 
-    Dec 12: Pepper, the Movement, New Beat Fund
-    Dec 14: For the Sender: Sean & Sara Watkins
-    Dec 16: The Brian Setzer Orchestra
-    Dec 17: Nancarrow, Bastard Sons of Johnny Cash
-    Dec 18: Johnny Marr and Meredith Sheldon
-    Dec 19: Who's Bad: Michael Jackson tribute
-    Dec 20: Ugly Sweater Party: Young Guns, more
-    Dec 21: Dick Dale's Holiday Show
-    Dec 22: The Growlers
-    Dec 26: A Cash'd Out Christmas
-    Dec 27: Greyboy Allstars
-    Dec 28: The Aggrolites and Creepy Creeps
-    Dec 29: Tainted Love '80s Dance
-    Dec 30: Cracker and Camper Van Beethoven
-    Dec 31: Donovan Frankenreiter
-    Jan 1, 2015: Anuhea and Tribal Theory
-    Jan 2, 2015: Pato Banton
-    Jan 3, 2015: 5th Annual Beat Farmers Hootenanny
-    Jan 4, 2015: Trombone Shorty & Orleans Avenue
-    Jan 9, 2015: Katchafire
-    Jan 10, 2015: Ozomatli
-    Jan 11, 2015: The Jayhawks
-    Jan 14, 2015: Marc Cohn
-    Jan 15, 2015: Dead Kennedys, White Kaps, HTTH
-    Jan 16, 2015: Wild Child
-    Jan 17, 2015: Tower of Power and Ben Powell Duo
-    Jan 18, 2015: Six String Society
-    Jan 19, 2015: Randy Rogers Band and Wade Bowen
-    Jan 22, 2015: MarchFourth Marching Band
-    Jan 23, 2015: Big Head Todd & The Monsters
-    Jan 25, 2015: Los Lobos and Hamish Anderson
-    Jan 27, 2015: The Wailers
-    Jan 29, 2015: Keller Williams and the Motet
-    Jan 30, 2015: Dave Alvin, Phil Alvin & Guilty Ones
-    Jan 31, 2015: Abbey Road vs Jumpin' Jack Flash
-    Jan 31, 2015: Lovebirds, Tolan Shaw, Dr. Seahorse
-    Feb 2, 2015: Todd Snider and Reed Foehl
-    Feb 3, 2015: Lettuce and Break Science
-    Feb 5, 2015: Kenny Wayne Shepherd Band
-    Feb 7, 2015: Dead Man's Party and Betamaxx
-    Feb 8, 2015: Jim Brickman
-    Feb 9, 2015: Battle of the Chef's Bands
-    Feb 10, 2015: Granger Smith & Earl Dibbles, Jr.
-    Feb 12, 2015: Zion I: The Rapture Tour
-    Feb 13, 2015: ALO and T Sisters
-    Feb 14, 2015: Ozomatli
-    Feb 17, 2015: Over the Rhine and William Fitzsimmons
-    Feb 18, 2015: Lotus
-    Feb 19, 2015: The Taj Mahal Trio
-    Feb 21, 2015: Steve Poltz, Rugburns, Shook Twins
-    Feb 22, 2015: Zap Mama & Antibalas
-    Feb 28, 2015: Pine Mountain Logs
-    Mar 4, 2015: Galactic
-    Mar 6, 2015: Super Diamond
-    Mar 10, 2015: Joshua Radin and Rachael Yamagata
-    Mar 11, 2015: Hurray for the Riff Raff
-    Mar 12, 2015: Martin Sexton and Brothers McCann
-    Mar 13, 2015: Twin Shadow
-    Mar 14, 2015: Tommy Castro & the Painkillers
-    Mar 20, 2015: Railroad Earth
-    Mar 25, 2015: Gang of Four
-    Mar 29, 2015: Jonny Lang
-    Mar 31, 2015: Kitty, Daisy & Lewis
-    Apr 1, 2015: Ed Kowalczyk: Throwing Copper Unplugged
-    Apr 24, 2015: The Dead Milkmen
-    May 3, 2015: They Might Be Giants
-    May 7, 2015: Herb Alpert & Lani Hall
+    Dec 12: Pepper, the Movement, New Beat Fund</br>
+    Dec 14: For the Sender: Sean & Sara Watkins</br>
+    Dec 16: The Brian Setzer Orchestra</br>
+    Dec 17: Nancarrow, Bastard Sons of Johnny Cash</br>
+    Dec 18: Johnny Marr and Meredith Sheldon</br>
+    Dec 19: Who's Bad: Michael Jackson tribute</br>
+    Dec 20: Ugly Sweater Party: Young Guns, more</br>
+    Dec 21: Dick Dale's Holiday Show</br>
+    Dec 22: The Growlers</br>
+    Dec 26: A Cash'd Out Christmas</br>
+    Dec 27: Greyboy Allstars</br>
+    Dec 28: The Aggrolites and Creepy Creeps</br>
+    Dec 29: Tainted Love '80s Dance</br>
+    Dec 30: Cracker and Camper Van Beethoven</br>
+    Dec 31: Donovan Frankenreiter</br>
+    Jan 1, 2015: Anuhea and Tribal Theory</br>
+    Jan 2, 2015: Pato Banton</br>
+    Jan 3, 2015: 5th Annual Beat Farmers Hootenanny</br>
+    Jan 4, 2015: Trombone Shorty & Orleans Avenue</br>
+    Jan 9, 2015: Katchafire</br>
+    Jan 10, 2015: Ozomatli</br>
+    Jan 11, 2015: The Jayhawks</br>
+    Jan 14, 2015: Marc Cohn</br>
+    Jan 15, 2015: Dead Kennedys, White Kaps, HTTH</br>
+    Jan 16, 2015: Wild Child</br>
+    Jan 17, 2015: Tower of Power and Ben Powell Duo</br>
+    Jan 18, 2015: Six String Society</br>
+    Jan 19, 2015: Randy Rogers Band and Wade Bowen</br>
+    Jan 22, 2015: MarchFourth Marching Band</br>
+    Jan 23, 2015: Big Head Todd & The Monsters</br>
+    Jan 25, 2015: Los Lobos and Hamish Anderson</br>
+    Jan 27, 2015: The Wailers</br>
+    Jan 29, 2015: Keller Williams and the Motet</br>
+    Jan 30, 2015: Dave Alvin, Phil Alvin & Guilty Ones</br>
+    Jan 31, 2015: Abbey Road vs Jumpin' Jack Flash</br>
+    Jan 31, 2015: Lovebirds, Tolan Shaw, Dr. Seahorse</br>
+    Feb 2, 2015: Todd Snider and Reed Foehl</br>
+    Feb 3, 2015: Lettuce and Break Science</br>
+    Feb 5, 2015: Kenny Wayne Shepherd Band</br>
+    Feb 7, 2015: Dead Man's Party and Betamaxx</br>
+    Feb 8, 2015: Jim Brickman</br>
+    Feb 9, 2015: Battle of the Chef's Bands</br>
+    Feb 10, 2015: Granger Smith & Earl Dibbles, Jr.</br>
+    Feb 12, 2015: Zion I: The Rapture Tour</br>
+    Feb 13, 2015: ALO and T Sisters</br>
+    Feb 14, 2015: Ozomatli</br>
+    Feb 17, 2015: Over the Rhine and William Fitzsimmons</br>
+    Feb 18, 2015: Lotus</br>
+    Feb 19, 2015: The Taj Mahal Trio</br>
+    Feb 21, 2015: Steve Poltz, Rugburns, Shook Twins</br>
+    Feb 22, 2015: Zap Mama & Antibalas</br>
+    Feb 28, 2015: Pine Mountain Logs</br>
+    Mar 4, 2015: Galactic</br>
+    Mar 6, 2015: Super Diamond</br>
+    Mar 10, 2015: Joshua Radin and Rachael Yamagata</br>
+    Mar 11, 2015: Hurray for the Riff Raff</br>
+    Mar 12, 2015: Martin Sexton and Brothers McCann</br>
+    Mar 13, 2015: Twin Shadow</br>
+    Mar 14, 2015: Tommy Castro & the Painkillers</br>
+    Mar 20, 2015: Railroad Earth</br>
+    Mar 25, 2015: Gang of Four</br>
+    Mar 29, 2015: Jonny Lang</br>
+    Mar 31, 2015: Kitty, Daisy & Lewis</br>
+    Apr 1, 2015: Ed Kowalczyk: Throwing Copper Unplugged</br>
+    Apr 24, 2015: The Dead Milkmen</br>
+    May 3, 2015: They Might Be Giants</br>
+    May 7, 2015: Herb Alpert & Lani Hall</br>
 
-Bernardo Winery
+<h3>Bernardo Winery</h3>
 
-    Dec 13: Steven Ybarra
+    Dec 13: Steven Ybarra</br>
 
-Bethany Lutheran Church
+<h3>Bethany Lutheran Church</h3>
 
-    Dec 14: Celtic Winter Concert
+    Dec 14: Celtic Winter Concert</br>
 
-Bird Rock Coffee Roasters
+<h3>Bird Rock Coffee Roasters</h3>
 
-    Dec 13: Robin Henkel
+    Dec 13: Robin Henkel</br>
 
 Bistro Sixty & San Diego Desserts
 
@@ -436,61 +436,61 @@ Bistro Sixty & San Diego Desserts
 
 Black Cat Bar
 
-    Dec 20: Fast Heart Mart and MJ Stevens
+    Dec 20: Fast Heart Mart and MJ Stevens</br>
 
 Blackthorn Irish Pub & Grub
 
-    Jan 9, 2015: Blown Fuse
+    Jan 9, 2015: Blown Fuse</br>
 
 Boar Cross'n
 
-    Dec 12: Club Musae
-    Dec 13: Twisted Relatives
-    Dec 16: Video DJ
-    Dec 19: Club Musae
-    Dec 20: Rootsicali and AOK
-    Dec 23: Video DJ
-    Dec 26: Club Musae
-    Dec 30: Video DJ
-    Dec 31: SM Familia
-    Jan 2, 2015: Club Musae
-    Jan 6, 2015: Video DJ
-    Jan 9, 2015: Club Musae
-    Jan 13, 2015: Video DJ
-    Jan 16, 2015: Club Musae
-    Jan 20, 2015: Video DJ
+    Dec 12: Club Musae</br>
+    Dec 13: Twisted Relatives</br>
+    Dec 16: Video DJ</br>
+    Dec 19: Club Musae</br>
+    Dec 20: Rootsicali and AOK</br>
+    Dec 23: Video DJ</br>
+    Dec 26: Club Musae</br>
+    Dec 30: Video DJ</br>
+    Dec 31: SM Familia</br>
+    Jan 2, 2015: Club Musae</br>
+    Jan 6, 2015: Video DJ</br>
+    Jan 9, 2015: Club Musae</br>
+    Jan 13, 2015: Video DJ</br>
+    Jan 16, 2015: Club Musae</br>
+    Jan 20, 2015: Video DJ</br>
 
 Brass Rail
 
-    Dec 12: Hip-Hop Fridayz
-    Dec 13: Sabado en Fuego
-    Dec 15: Manic Monday
-    Dec 19: Hip-Hop Fridayz
-    Dec 20: Sabado en Fuego
-    Dec 22: Manic Monday
-    Dec 26: Hip-Hop Fridayz
-    Dec 27: Sabado en Fuego
-    Dec 29: Manic Monday
-    Dec 31: NYE with DJ XP
-    Jan 2, 2015: Hip-Hop Fridayz
-    Jan 3, 2015: Sabado en Fuego
-    Jan 5, 2015: Manic Monday
+    Dec 12: Hip-Hop Fridayz</br>
+    Dec 13: Sabado en Fuego</br>
+    Dec 15: Manic Monday</br>
+    Dec 19: Hip-Hop Fridayz</br>
+    Dec 20: Sabado en Fuego</br>
+    Dec 22: Manic Monday</br>
+    Dec 26: Hip-Hop Fridayz</br>
+    Dec 27: Sabado en Fuego</br>
+    Dec 29: Manic Monday</br>
+    Dec 31: NYE with DJ XP</br>
+    Jan 2, 2015: Hip-Hop Fridayz</br>
+    Jan 3, 2015: Sabado en Fuego</br>
+    Jan 5, 2015: Manic Monday</br>
 
 Bread & Salt
 
-    Jan 15, 2015: Fresh Sound: Red Fish Blue Fish
-    Feb 6, 2015: Fresh Sound: Ross Karre
-    Feb 18, 2015: Fresh Sound: Jean-Charles Francois Trio
-    Feb 21, 2015: MIXX Concert Series: Tango Popularé
-    Mar 20, 2015: Fresh Sound: Aiyun Huang & Eric Derr
-    Apr 9, 2015: Fresh Sound: Brian Archinal
-    May 1, 2015: Fresh Sound: Kjell Nordeson
-    May 9, 2015: MIXX Concert Series: The Bossa Nova
+    Jan 15, 2015: Fresh Sound: Red Fish Blue Fish</br>
+    Feb 6, 2015: Fresh Sound: Ross Karre</br>
+    Feb 18, 2015: Fresh Sound: Jean-Charles Francois Trio</br>
+    Feb 21, 2015: MIXX Concert Series: Tango Popularé</br>
+    Mar 20, 2015: Fresh Sound: Aiyun Huang & Eric Derr</br>
+    Apr 9, 2015: Fresh Sound: Brian Archinal</br>
+    May 1, 2015: Fresh Sound: Kjell Nordeson</br>
+    May 9, 2015: MIXX Concert Series: The Bossa Nova</br>
 
 Brick by Brick
 
-    Dec 12: A Time For Dime Tribute Concert
-    Dec 13: Strung Out, H20, Skipjack, Somatic
+    Dec 12: A Time For Dime Tribute Concert</br>
+    Dec 13: Strung Out, H20, Skipjack, Somatic</br>
     Dec 15: Metal Mondays
     Dec 17: The Obscure '80s Dance Party
     Dec 18: Children of the Grave
@@ -1060,99 +1060,99 @@ The Kensington Club
 
 Kona Kai Resort & Marina
 
-    Dec 21: Whitney Shay and Robin Henkel
-    Dec 28: Joe Cardillo
+    Dec 21: Whitney Shay and Robin Henkel</br>
+    Dec 28: Joe Cardillo</br>
 
 The Kraken
 
-    Dec 18: Rio Peligroso
-    Dec 19: Rockgarden
+    Dec 18: Rio Peligroso</br>
+    Dec 19: Rockgarden</br>
 
 La Jolla United Methodist Church
 
-    Dec 14: Christmas Concert: How Great Our Joy
+    Dec 14: Christmas Concert: How Great Our Joy</br>
 
 La Valencia Hotel
 
-    Dec 31: New Year’s Eve Celebrations
+    Dec 31: New Year’s Eve Celebrations</br>
 
 Lafayette Hotel, Swim Club & Bungalows
 
-    Dec 31: On With the Show: New Year's Eve
+    Dec 31: On With the Show: New Year's Eve</br>
 
 Lakeside Community Presbyterian Church
 
-    Dec 12: Vivaldi's Gloria
+    Dec 12: Vivaldi's Gloria</br>
 
 Last Call
 
-    Dec 19: Diane Marie and Randy Lane
+    Dec 19: Diane Marie and Randy Lane</br>
 
 Lestat's Coffee House
 
-    Dec 12: Brendan McCreary, Aaron & Jane, Rob Deez
-    Dec 13: Dat Phan & Friends
-    Dec 14: Scott West
-    Dec 15: Open Mic Night
-    Dec 17: Caroline Corn, Tim Connolly, IIya Shatov
-    Dec 18: Charlie Recksieck and Destinie Gardner
-    Dec 19: My Name is You and Katie Leigh
-    Dec 20: Allison Lonsdale and Eben Brooks
-    Dec 20: Ramekega, Drea Delacruz, Raelee Nikole
-    Dec 21: Roni Lee Rocks Christmas 2
-    Dec 22: Open Mic Night
-    Dec 26: Gregory Page Christmas Show
-    Dec 27: Dat Phan & Friends
-    Jan 2, 2015: Sophia Bacino, Kennady Tracy, Tim Connolly
-    Jan 11, 2015: Robin Henkel Band with Horns
-    Jan 14, 2015: Joe Marson and Anthony Hall
-    Jan 17, 2015: Allison Lonsdale and Eben Brooks
+    Dec 12: Brendan McCreary, Aaron & Jane, Rob Deez</br>
+    Dec 13: Dat Phan & Friends</br>
+    Dec 14: Scott West</br>
+    Dec 15: Open Mic Night</br>
+    Dec 17: Caroline Corn, Tim Connolly, IIya Shatov</br>
+    Dec 18: Charlie Recksieck and Destinie Gardner</br>
+    Dec 19: My Name is You and Katie Leigh</br>
+    Dec 20: Allison Lonsdale and Eben Brooks</br>
+    Dec 20: Ramekega, Drea Delacruz, Raelee Nikole</br>
+    Dec 21: Roni Lee Rocks Christmas 2</br>
+    Dec 22: Open Mic Night</br>
+    Dec 26: Gregory Page Christmas Show</br>
+    Dec 27: Dat Phan & Friends</br>
+    Jan 2, 2015: Sophia Bacino, Kennady Tracy, Tim Connolly</br>
+    Jan 11, 2015: Robin Henkel Band with Horns</br>
+    Jan 14, 2015: Joe Marson and Anthony Hall</br>
+    Jan 17, 2015: Allison Lonsdale and Eben Brooks</br>
 
 Level 9
 
-    Dec 31: New Years Eve 2015
+    Dec 31: New Years Eve 2015</br>
 
 The Lodge at Torrey Pines
 
-    Dec 12: Mike Nelson
+    Dec 12: Mike Nelson</br>
 
 The Loft
 
-    Dec 13: Allison Adams Tucker & UCSD Tritones
-    Dec 16: The Village Squares
-    Jan 7, 2015: Julian Lage
-    Jan 15, 2015: The Nomads, HM3, Joshua White
-    Feb 11, 2015: Lily & Madeleine
-    Mar 4, 2015: Kris Bowers
+    Dec 13: Allison Adams Tucker & UCSD Tritones</br>
+    Dec 16: The Village Squares</br>
+    Jan 7, 2015: Julian Lage</br>
+    Jan 15, 2015: The Nomads, HM3, Joshua White</br>
+    Feb 11, 2015: Lily & Madeleine</br>
+    Mar 4, 2015: Kris Bowers</br>
 
 Manchester Grand Hyatt
 
-    Jan 7, 2015: Jazz Educators Network Conference
-    May 2, 2015: USO San Diego 74th Stars & Stripes Ball
+    Jan 7, 2015: Jazz Educators Network Conference</br>
+    May 2, 2015: USO San Diego 74th Stars & Stripes Ball</br>
 
 Mandeville Auditorium at UCSD
 
-    Dec 12: La Jolla Symphony & Chorus
+    Dec 12: La Jolla Symphony & Chorus</br>
 
 Marina Kitchen
 
-    Dec 12: Matt Heinecke
-    Dec 13: Christian Taylor
-    Dec 19: Matt Heinecke
-    Dec 26: Christian Taylor
-    Dec 27: Matt Heinecke
-    Dec 31: Christian Taylor
-    Dec 31: Matt Heinecke
+    Dec 12: Matt Heinecke</br>
+    Dec 13: Christian Taylor</br>
+    Dec 19: Matt Heinecke</br>
+    Dec 26: Christian Taylor</br>
+    Dec 27: Matt Heinecke</br>
+    Dec 31: Christian Taylor</br>
+    Dec 31: Matt Heinecke</br>
 
 Martinis Above Fourth
 
-    Dec 15: Chondra Profit: Jazzed Up Christmas
-    Dec 16: Take the Stage: A Customer Cabaret
-    Dec 31: New Year's Eve with Amy & Freddy
+    Dec 15: Chondra Profit: Jazzed Up Christmas</br>
+    Dec 16: Take the Stage: A Customer Cabaret</br>
+    Dec 31: New Year's Eve with Amy & Freddy</br>
 
 Meadowlark Community Church
 
-    Dec 20: Peter Pupping Quartet and Tim Holcombe
+    Dec 20: Peter Pupping Quartet and Tim Holcombe</br>
 
 </p> -->
 
@@ -1202,4 +1202,4 @@ Meadowlark Community Church
 
 
 </body>
-</html>
+</html>v
