--- a/bowen.html
+++ b/bowen.html
@@ -166,7 +166,7 @@
           <div class="row">
             <div class="col-md-12">
 
-              <img src = "./images/bowen.jpg" height = "450"/>
+              <img src = "./images/bowen.jpg">
 
               <h3>About</h3>
 
@@ -253,9 +253,7 @@
                           <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
                             <h2>Concert Feed</h2>
 
-                            <div class="list-group">
-                              <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%2366cccc&amp;src=alrodz018%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="400" height="400" frameborder="0" scrolling="no"></iframe>
-                            </div>
+                            <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/27789150&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                           </div><!--/.sidebar-offcanvas-->
                         </div><!--/row-->
 
