Added main stylesheet to pages

--- a/calendar.html
+++ b/calendar.html
@@ -18,6 +18,7 @@
     <link href="./css/offcanvas.css" rel="stylesheet">
     <link href="./yamm/yamm.css" rel="stylesheet">
     <link href="./css/offcanvas.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
